k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: gl-app
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      namespace: gl-app
      labels:
        app: backend
    spec:
      containers:
      - name: gl-app
        image: diveshkumar1234/glapp-backend:latest
        ports:
        - containerPort: 8004
