k8s/backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: gl-app
spec:
  selector:
    app: backend
  ports:
  - port: 8004
    targetPort: 8004
