k8s/fronted-service.yml
kind: Service
apiVersion: v1
metadata:
  name: fronted
  namespace: gl-app
spec:
  selector:
    app: fronted
  ports:
  - port: 3003
    targetPort: 80
