k8s/postgres-service.yml
kind: Service
apiVersion: v1
metadata:
  name: postgres
  namespace: gl-app
spec:
  selector:
    app: postgres  
  ports:
    - protocol: TCP
      port: 5433          
      targetPort: 5432    
  type: ClusterIP
